--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,8 @@
                 android:layout_margin="8dp"
                 android:backgroundTint="@color/gray"
                 android:text="+"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:onClick="addition"/>
         </LinearLayout>
 
         <Button
