--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,19 @@
     android:orientation="vertical"
     android:background="@color/green">
 
+
     <ImageView
+        android:id="@+id/pic"
         android:layout_width="355dp"
         android:layout_height="376dp"
         android:layout_centerHorizontal="true"
         android:src="@drawable/coffee" />
+
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="Hello world!"
+        android:layout_below="@id/pic"/>
 
     <LinearLayout
         android:layout_width="130dp"
