add checkbox without functionality and text

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:src="@drawable/coffee" />
 
     <LinearLayout
-        android:layout_width="130dp"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_above="@id/numberofprice"
         android:layout_alignParentRight="true"
@@ -25,8 +25,30 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:orientation="vertical"
-        android:background="@color/darkgreen">
+        android:background="@color/darkgreen"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="Toppings:"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:layout_margin="8dp" />
+
+        </LinearLayout>
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -34,8 +56,8 @@
             android:layout_margin="8dp"
             android:text="Quantity:"
             android:textAllCaps="true"
-            android:textSize="20sp"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,9 +69,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:backgroundTint="@color/gray"
+                android:onClick="substraction"
                 android:text="-"
-                android:textColor="@color/black"
-                android:onClick="substraction"/>
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/numbofquant"
@@ -58,8 +80,8 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="0"
-                android:textSize="20sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/add"
@@ -67,9 +89,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:backgroundTint="@color/gray"
+                android:onClick="addition"
                 android:text="+"
-                android:textColor="@color/black"
-                android:onClick="addition"/>
+                android:textColor="@color/black" />
         </LinearLayout>
 
         <Button
@@ -78,10 +100,10 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:backgroundTint="@color/gray"
+            android:onClick="order"
             android:text="Order"
             android:textAllCaps="true"
-            android:textColor="@color/black"
-            android:onClick="order"/>
+            android:textColor="@color/black" />
 
 
     </LinearLayout>
