--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,13 @@
 
     <ImageView
         android:id="@+id/pic"
-        android:layout_width="355dp"
-        android:layout_height="376dp"
+        android:layout_width="329dp"
+        android:layout_height="353dp"
         android:layout_centerHorizontal="true"
         android:src="@drawable/coffee" />
 
     <LinearLayout
-        android:layout_width="140dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_above="@id/numberofprice"
         android:layout_alignParentRight="true"
@@ -44,8 +44,9 @@
             <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:layout_margin="8dp" />
+                android:layout_margin="8dp"
+                android:text="Whipped cream"
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
