--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
 
     <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="290dp"
         android:layout_above="@id/numberofprice"
         android:layout_alignParentRight="true"
         android:layout_marginStart="8dp"
@@ -41,19 +41,26 @@
                 android:textColor="@color/white"
                 android:textSize="20sp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
 
-                <CheckBox
-                    android:id="@+id/chckbx"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:text="Whipped cream"
-                    android:textColor="@color/white" />
+            <CheckBox
+                android:id="@+id/chckbx"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="Whipped cream"
+                android:textColor="@color/white" />
 
-            </LinearLayout>
+            <CheckBox
+                android:id="@+id/chckbx2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="ChocolateTop"
+                android:textColor="@color/white" />
+
+
 
 
             <TextView
