--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,14 @@
             android:background="@color/darkgreen"
             android:orientation="vertical">
 
+            <EditText
+                android:id="@+id/EdtTxtName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="8dp"
+                android:text="Name"
+                android:textColor="@color/white"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
