--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
-                android:text="Name"
+                android:hint="Name"
+                android:textColorHint="@color/white"
                 android:textColor="@color/white"/>
 
             <TextView
