--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp">
+
         <LinearLayout
-            android:layout_width="150dp"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
 
             android:background="@color/darkgreen"
@@ -37,15 +38,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
-                android:hint="Name"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white"/>
+                android:hint="@string/namehint"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:text="Toppings:"
+                android:text="@string/toppings"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
@@ -56,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:text="Whipped cream"
+                android:text="@string/whippedcream"
                 android:textColor="@color/white" />
 
             <CheckBox
@@ -66,17 +67,15 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="ChocolateTop"
+                android:text="@string/chocolatetop"
                 android:textColor="@color/white" />
-
-
 
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:text="Quantity:"
+                android:text="@string/quantity"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
@@ -123,7 +122,7 @@
                 android:layout_margin="8dp"
                 android:backgroundTint="@color/gray"
                 android:onClick="order"
-                android:text="Order"
+                android:text="@string/order"
                 android:textAllCaps="true"
                 android:textColor="@color/black" />
 
@@ -141,7 +140,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Total = $0"
+        android:text="@string/total"
         android:textSize="30sp"
         android:visibility="invisible" />
 
